--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ResetPassword_Activity"></activity>
+        android:theme="@style/Theme.AppCompat.DayNight">
+        <activity android:name=".SocialMedia_Activity"></activity>
+        <activity android:name=".ResetPassword_Activity" />
         <activity android:name=".ErrorDialog_Activity" />
         <activity android:name=".SuccessDialog_Activity" />
         <activity android:name=".SignUp_Activity" />
