--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.DayNight">
+        android:theme="@style/Theme.AppCompat.DayNight"
+        android:requestLegacyExternalStorage="true">
         <activity android:name=".SocialMedia_Activity"></activity>
         <activity android:name=".ResetPassword_Activity" />
         <activity android:name=".ErrorDialog_Activity" />
