--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.insta">
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.DayNight"
-        android:requestLegacyExternalStorage="true">
-        <activity android:name=".SocialMedia_Activity"></activity>
+        android:theme="@style/Theme.AppCompat.DayNight">
+        <activity android:name=".ViewUsersPost"></activity>
+        <activity android:name=".SocialMedia_Activity" />
         <activity android:name=".ResetPassword_Activity" />
         <activity android:name=".ErrorDialog_Activity" />
         <activity android:name=".SuccessDialog_Activity" />
